# sdsconv

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_ja.md  README_zh.md
.github/workflows/: python-wheels.yml  release.yml
corpus/ref_json/misc/: output02.json  output03.json  output04.json  output05.json  output05_v2.json  output06.json  output07.json  output08.json  output08_v2.json  output09.json  output09_v2.json  output09_v2_report.json  (+7 more)
corpus/reports/: quality_report.md  roundtrip_report.md  roundtrip_report_references.md  roundtrip_report_v2.md  roundtrip_report_v3.md
docs/: comparison.md  quality-check.md  quality-check_ja.md  quality-check_zh.md
examples/: causasv_quality_analysis.py
examples/mhlw_allyl_chloride/: README.md  convert.py  expected.json  expected_report.json  source.sha256  source.url  test_fixture.py
sds_converter/: Cargo.toml  README.md  README_ja.md  README_zh.md
sds_converter/src/: app.rs  config.rs  main.rs  tasks.rs
sds_converter_core/: Cargo.toml  README.md  README_ja.md  README_zh.md
sds_converter_core/src/: error.rs  language.rs  lib.rs
sds_converter_server/: Cargo.toml
sds_converter_server/src/: main.rs
sdsconv/: Cargo.toml
sdsconv/src/: main.rs  tasks.rs
sdsconv_core/: Cargo.toml
sdsconv_core/src/: lib.rs
sdsconv_py/: Cargo.toml  pyproject.toml
sdsconv_py/python/sdsconv/: __init__.py  causasv_bridge.py  eval.py
sdsconv_py/src/: lib.rs
sdsconv_server/src/: main.rs
tasks/: lessons.md  todo.md
tools/: compare_json.py  corpus_fetch.py  quality_check.py  roundtrip_test.sh  run_eval.sh
(+5 files in other folders)
